fixtures/invalid/bad-file-path.mu
@file path="../secrets.txt"
File paths must stay inside the project.
